<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_booktrotter">About BookTrotter</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search_drawer">"Search History"</string>
    <string name="books_saved_str">My Library</string>
    <string name="global_app_title">BookTrotter</string>
    <string name="searchLabel">Search a Book:</string>
    <string name="bookEx">Ex: The Lord of the Rings</string>
    <string name="btnSearch">Search!</string>
    <string name="enter_search_hint">Enter your search</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cover_img_descr">Cover picture of selected book</string>
    <string name="text_descript">Still dont understand why this has to be here</string>
    <string name="action_add_to_mylibrary">Add to My Library</string>
    <string name="label_book_ideas_first">Out of ideas?</string>
    <string name="label_book_ideas_second">Here are a few all-time bestselleres, subjects, authors, and much more!</string>
    <string name="janeausten">Emma</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="the_hobitt">The Hobbit</string>
    <string name="tale_two_cities">A Tale of Two Cities</string>
    <string name="lord_of_the_rings">The Lord of the Rings</string>
    <string name="el_quijote">El Quijote</string>
    <string name="pinocchio">Pinocchio</string>
    <string name="the_alchemist">The Alchemist</string>
    <string name="tolkien">Tolkien</string>
    <string name="dan_brown">Dan Brown</string>
    <string name="android">Android</string>
    <string name="love_sub">Love</string>
    <string name="art">Art</string>
    <string name="jules_verne">Jules Verne</string>Hemingway
    <string name="hemingway">Hemingway</string>
    <string name="poetry">Poetry</string>
    <string name="subjects">Subjects</string>
    <string name="titles">Titles</string>
    <string name="authors">Authors</string>
    <string name="my_library">My Library</string>
    <string name="my_library_title">BookTrotter - My Library</string>
    <string name="notfound_label">Looks like you haven\'t saved any books.. Let\'s fix it!! </string>
    <string name="lets_search">Lets Search!!</string>
    <string name="search_history">Search History</string>

    <string name="title_label_inside">Full Title:</string>
    <string name="author_principal_label_inside">Main Author:</string>
    <string name="edition_label_inside">Edition Count:</string>
    <string name="subtitle_label_inside">Subtitle:</string>
    <string name="isbn_label_inside">ISBN:</string>
    <string name="year_first_publish_label_inside">1st Publication Year:</string>

    <string name="description_title_of_book">The title provided.</string>
    <string name="description_author_of_book">The author of this book.</string>
    <string name="description_isbn_of_book">The ISBN of this book.</string>
    <string name="description_edition_of_book">The number of editions this book has.</string>
    <string name="description_year_first_publish_of_book">The year in which this book was first published.</string>
    <string name="description_subtitle_of_book">The subtitle given to this book (if any).</string>
    <string name="description_love_button_of_book">Button to save this book to My Library.</string>
    <string name="description_name_publisher_of_book">Name of main Publisher for this book.</string>
    <string name="description_delete_all_list">Delete all entries.</string>
    <string name="description_new_search">New Search!</string>


    <string name="about_author_label_card_inside">The Author:</string>
    <string name="search_author_label_card_inside">Explore more books from this writer!</string>
    <string name="the_search_input_query_value">The search query.</string>
    <string name="subjects_list_label_inside">Subjects:</string>

    <string name="unknown_value">Unknown</string>
    <string name="sort_big_first_edition_count">Sort from most editions to least.</string>
    <string name="sort_small_first_edition_count">Sort from least editions to most.</string>
    <string name="book_results_amount_label">Nº Books found: </string>
    <string name="intent_that_started_search">INTENT THAT STARTED THIS SEARCH</string>
    <string name="intent_from_main_activity">from MainActivity</string>
    <string name="intent_from_onebookinfo_activity_authorname">from OneBookInfoActivity</string>
    <string name="origin_of_search_value">ORIGIN OF SEARCH VALUE</string>


    <string name="publisher_label_inside">Main Publisher:</string>
    <string name="title_activity_about_book_trotter">AboutBookTrotterActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>
