<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/search_history_background"

    android:fitsSystemWindows="false"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SearchHistory"
    tools:showIn="@layout/app_bar_history_search">

    <ImageView
        android:id="@+id/delete_all_history"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"
        android:layout_margin="10dp"
        android:contentDescription="@string/description_delete_all_list"
        android:elevation="10dp"
        android:onClick="deleteAllHistory"
        app:srcCompat="@drawable/delete_trashcan_with_x" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_search_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/greenPrimaryThemeColor"
        android:contentDescription="@string/description_new_search"
        android:elevation="80dp"
        android:fitsSystemWindows="true"
        android:padding="0dp"
        android:scaleType="fitStart"
        app:borderWidth="0dp"
        app:maxImageSize="38dp"
        app:srcCompat="@drawable/binoculars_search_plus_gradient_shadow_yellow"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/title_recentsearches"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:fontFamily="@font/bad_script"
        android:gravity="center"
        android:text="@string/search_history"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <ListView
            android:id="@+id/mylistview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/greenPrimaryThemeColor"
            android:dividerHeight="1dp" />
    </LinearLayout>


</FrameLayout>